[package]
name = "ashscript-types"
version = "0.10.18"
edition = "2021"
authors=["Ashscript Contributors"]
description="Types for Ashcript Game game and action states"
homepage="https://github.com/Ashscript-Game/ashscript-types"
license = "MIT OR Apache-2.0"

[dependencies]
hashbrown = {version="0.15.0", features = ["serde"] }
hexx = { version = "0.18.0", features = ["serde"] }
enum-map = {version="2.7.3", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
lazy_static="1.5.0"
glam="0.27.0"
uuid = {version="1.10.0", features = ["serde", "v4"] }
enum_dispatch = "0.3.13"
enum-iterator = "2.1.0"
hecs = { version = "0.10.5", features = ["serde", "column-serialize", "row-serialize"] }
postcard = { version = "1.0.10", features = ["use-std"] }
bitcode = { version = "0.6.3", features = ["serde"] }
